# range-v3-adapter

./: CMakeLists.txt  README.md
cmake/: unit_testing.cmake
metaconfigure/: description.json  description.py
