
cmake_minimum_required( VERSION 3.2 ) 
set( CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Supported configuration types" FORCE )
        
project( range-v3-adapter LANGUAGES CXX )
get_directory_property( is_subproject PARENT_DIRECTORY )
include( CMakeDependentOption REQUIRED )

if ( NOT GIT_EXECUTABLE )
    find_package( Git )
    if ( NOT GIT_FOUND )
        message( FATAL_ERROR "git installation was not found." )
    endif()
endif()

execute_process(
    COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
    OUTPUT_VARIABLE GIT_BRANCH
    OUTPUT_STRIP_TRAILING_WHITESPACE
)
execute_process(
    COMMAND ${GIT_EXECUTABLE} rev-parse HEAD
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
    OUTPUT_VARIABLE GIT_HASH
    OUTPUT_STRIP_TRAILING_WHITESPACE
) 

message( STATUS "" )
message( STATUS "-----------------------------------------------------------" )
message( STATUS "" )
message( STATUS "range-v3-adapter" )
message( STATUS "Git current branch: ${GIT_BRANCH}" )
message( STATUS "Git commit hash: ${GIT_HASH}" )
message( STATUS "" )
message( STATUS "-----------------------------------------------------------" )

add_library( range-v3-adapter INTERFACE )
target_include_directories( range-v3-adapter INTERFACE src/include )
target_sources( range-v3-adapter INTERFACE
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/meta/meta.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/meta/meta_fwd.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/action.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/concepts.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/drop.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/drop_while.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/erase.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/insert.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/join.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/push_back.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/push_front.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/remove_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/reverse.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/shuffle.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/slice.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/sort.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/split.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/stable_sort.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/stride.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/take.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/take_while.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/transform.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action/unique.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/action.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/adjacent_find.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/all_of.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/any_of.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/aux_/equal_range_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/aux_/lower_bound_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/aux_/merge_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/aux_/merge_n_with_buffer.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/aux_/partition_point_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/aux_/sort_n_with_buffer.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/aux_/upper_bound_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/binary_search.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/copy.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/copy_backward.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/copy_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/copy_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/count.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/count_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/equal.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/equal_range.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/fill.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/fill_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/find.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/find_end.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/find_first_of.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/find_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/find_if_not.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/for_each.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/for_each_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/generate.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/generate_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/heap_algorithm.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/inplace_merge.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/is_partitioned.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/is_sorted.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/is_sorted_until.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/lexicographical_compare.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/lower_bound.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/max.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/max_element.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/merge.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/min.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/min_element.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/minmax.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/minmax_element.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/mismatch.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/move.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/move_backward.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/none_of.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/nth_element.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/partial_sort.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/partial_sort_copy.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/partition.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/partition_copy.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/partition_point.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/permutation.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/remove.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/remove_copy.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/remove_copy_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/remove_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/replace.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/replace_copy.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/replace_copy_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/replace_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/reverse.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/reverse_copy.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/rotate.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/rotate_copy.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/sample.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/search.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/search_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/set_algorithm.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/shuffle.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/sort.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/stable_partition.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/stable_sort.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/swap_ranges.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/tagspec.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/transform.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/unique.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/unique_copy.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm/upper_bound.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/algorithm.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/all.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/at.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/back.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/begin_end.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/core.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/data.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/detail/config.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/detail/satisfy_boost_range.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/detail/variant.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/distance.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/empty.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/experimental/utility/generator.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/front.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/getlines.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/index.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/istream_range.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/iterator_range.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/numeric/accumulate.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/numeric/adjacent_difference.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/numeric/inner_product.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/numeric/iota.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/numeric/partial_sum.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/numeric.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/range_access.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/range_concepts.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/range_for.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/range_fwd.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/range_traits.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/size.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/span.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/to_container.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/any.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/associated_types.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/basic_iterator.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/box.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/common_iterator.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/common_tuple.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/common_type.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/compressed_pair.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/concepts.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/copy.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/counted_iterator.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/dangling.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/functional.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/get.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/infinity.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/invoke.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/iterator.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/iterator_concepts.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/iterator_traits.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/memory.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/move.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/nullptr_v.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/optional.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/polymorphic_cast.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/random.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/safe_int.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/scope_exit.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/semiregular.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/static_const.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/swap.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/tagged_pair.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/tagged_tuple.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/tuple_algorithm.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/unreachable.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/utility/variant.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/version.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/adjacent_filter.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/adjacent_remove_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/all.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/any_view.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/bounded.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/c_str.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/cartesian_product.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/chunk.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/concat.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/const.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/counted.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/cycle.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/delimit.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/drop.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/drop_exactly.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/drop_while.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/empty.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/filter.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/for_each.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/generate.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/generate_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/group_by.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/indices.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/indirect.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/intersperse.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/iota.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/join.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/linear_distribute.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/map.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/move.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/partial_sum.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/remove_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/repeat.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/repeat_n.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/replace.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/replace_if.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/reverse.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/sample.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/set_algorithm.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/single.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/slice.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/sliding.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/split.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/stride.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/tail.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/take.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/take_exactly.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/take_while.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/tokenize.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/transform.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/unbounded.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/unique.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/view.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/zip.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view/zip_with.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view_adaptor.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view_facade.hpp"
"${CMAKE_CURRENT_SOURCE_DIR}/src/include/range/v3/view_interface.hpp")
